--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql2": "^3.10.1"
-  }
+  },
+  "description": ""
 }
